name:                   gt
version:                0.1.0.0
synopsis:               A git-based version control system
-- description:
homepage:               https://github.com/cblp/gt
bug-reports:            https://github.com/cblp/gt/issues
license:                GPL-2
license-file:           LICENSE
author:                 Yuriy Syrovetskiy
                    ,   sphaso
maintainer:             cblp@cblp.su
-- copyright:
category:               Development
build-type:             Simple
cabal-version:          >=1.8


executable gt-init
    main-is:            Command/InitMain.hs
    -- other-modules:
    build-depends:      base
                    ,   process
                    ,   transformers
    ghc-options:        -Wall -Werror

test-suite test-gt-init
    type:               exitcode-stdio-1.0
    main-is:            Tests/Command/Init.hs
    build-depends:      base
                    ,   directory
                    ,   process
                    ,   temporary
                    ,   transformers
    ghc-options:        -Wall -Werror
