name:                   gt
version:                0.0.0.0
synopsis:               A git-based version control system
description:            A version control system, based on git,
                        and compatible with git.
                        Gt fixes several git's shortcomings.
homepage:               https://github.com/cblp/gt
bug-reports:            https://github.com/cblp/gt/issues
license:                GPL-2
license-file:           LICENSE
author:                 Yuriy Syrovetskiy
                    ,   sphaso
maintainer:             cblp@cblp.su
-- copyright:
category:               Development
build-type:             Simple
cabal-version:          >=1.8

source-repository head
    type:               git
    location:           https://github.com/cblp/gt.git


executable gt-init
    main-is:            Command/InitMain.hs
    build-depends:      base            >= 4.6.0    && < 4.7
                    ,   process         >= 1.1.0    && < 1.2
                    ,   transformers    >= 0.3.0    && < 0.4
    ghc-options:        -Wall

executable gt-help
    main-is:            Command/HelpMain.hs
    build-depends:      base            >= 4.6.0    && < 4.7
    ghc-options:        -Wall

test-suite test-gt-init
    type:               exitcode-stdio-1.0
    main-is:            Tests/Command/Init.hs
    build-depends:      base            >= 4.6.0    && < 4.7
                    ,   directory       >= 1.2.0    && < 1.3
                    ,   process         >= 1.1.0    && < 1.2
                    ,   temporary       >= 1.2.0    && < 1.3
                    ,   transformers    >= 0.3.0    && < 0.4
    ghc-options:        -Wall
